# src/app/services/models.ts
@@ -2,24 +2,24 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export { AuthenticationRequest } from './models/authentication-request';
-export { AuthenticationResponse } from './models/authentication-response';
-export { Certification } from './models/certification';
-export { Evaluation } from './models/evaluation';
-export { Feedback } from './models/feedback';
-export { FeedbackRequest } from './models/feedback-request';
-export { FeedbackResponse } from './models/feedback-response';
-export { GrantedAuthority } from './models/granted-authority';
-export { PageResponseFeedbackResponse } from './models/page-response-feedback-response';
-export { PageResponseTrainingResponse } from './models/page-response-training-response';
-export { Question } from './models/question';
-export { Quiz } from './models/quiz';
-export { RegistrationRequest } from './models/registration-request';
-export { Skill } from './models/skill';
-export { Training } from './models/training';
-export { TrainingContent } from './models/training-content';
-export { TrainingLevel } from './models/training-level';
-export { TrainingRequest } from './models/training-request';
-export { TrainingResponse } from './models/training-response';
-export { TrainingSession } from './models/training-session';
-export { User } from './models/user';
+export type { AuthenticationRequest } from './models/authentication-request';
+export type { AuthenticationResponse } from './models/authentication-response';
+export type { Certification } from './models/certification';
+export type { Evaluation } from './models/evaluation';
+export type { Feedback } from './models/feedback';
+export type { FeedbackRequest } from './models/feedback-request';
+export type { FeedbackResponse } from './models/feedback-response';
+export type { GrantedAuthority } from './models/granted-authority';
+export type { PageResponseFeedbackResponse } from './models/page-response-feedback-response';
+export type { PageResponseTrainingResponse } from './models/page-response-training-response';
+export type { Question } from './models/question';
+export type { Quiz } from './models/quiz';
+export type { RegistrationRequest } from './models/registration-request';
+export type { Skill } from './models/skill';
+export type { Training } from './models/training';
+export type { TrainingContent } from './models/training-content';
+export type { TrainingLevel } from './models/training-level';
+export type { TrainingRequest } from './models/training-request';
+export type { TrainingResponse } from './models/training-response';
+export type { TrainingSession } from './models/training-session';
+export type { User } from './models/user';
