# src/openapi/openapi.json
@@ -1,19 +1,18 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "OpenApi specification - IyedOmri",
+    "title": "OpenApi specification - IyedOmri coconsult",
     "description": "Open Api documentation for spring security and coconsult webapplication",
     "termsOfService": "Term Of Service",
     "contact": {
       "name": "CoConsult",
       "url": "https://www.linkedin.com/company/coconsult-it/?originalSubdomain=tn",
-      "email": "takouarjab@gmail.com"
+      "email": "takouatb0@gmail.com"
     },
     "license": {
       "name": "coconsult ISO web application licence",
       "url": "https://theurl.com"
-    },
-    "version": "1.0"
+    }
   },
   "servers": [
     {
@@ -206,47 +205,7 @@
         }
       }
     },
-    "/Trainings": {
-      "get": {
-        "tags": [
-          "Training"
-        ],
-        "operationId": "findAllTrainings",
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 1
-            }
-          },
-          {
-            "name": "size",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 10
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PageResponseTrainingResponse"
-                }
-              }
-            }
-          }
-        }
-      },
+    "/Trainings/saveTraining": {
       "post": {
         "tags": [
           "Training"
@@ -408,21 +367,6 @@
       }
     },
     "/Feedbacks/saveFeedback": {
-      "get": {
-        "description": "New endpoint",
-        "responses": {
-          "200": {
-            "description": "New response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "": ""
-                }
-              }
-            }
-          }
-        }
-      },
       "post": {
         "tags": [
           "feedback"
@@ -947,7 +891,7 @@
         }
       }
     },
-    "/Trainings/{training-id}": {
+    "/Trainings/findTraining/{training-id}": {
       "get": {
         "tags": [
           "Training"
@@ -978,6 +922,48 @@
         }
       }
     },
+    "/Trainings/findAllTrainings": {
+      "get": {
+        "tags": [
+          "Training"
+        ],
+        "operationId": "findAllTrainings",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseTrainingResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/Trainings/findAllTrainingsByTrainee": {
       "get": {
         "tags": [
@@ -992,7 +978,7 @@
             "schema": {
               "type": "integer",
               "format": "int32",
-              "default": 1
+              "default": 0
             }
           },
           {
@@ -1034,7 +1020,7 @@
             "schema": {
               "type": "integer",
               "format": "int32",
-              "default": 1
+              "default": 0
             }
           },
           {
@@ -1283,9 +1269,9 @@
             }
           },
           "score": {
-            "maximum": 20,
+            "maximum": 20.0,
             "exclusiveMaximum": false,
-            "minimum": 0,
+            "minimum": 0.0,
             "exclusiveMinimum": false,
             "type": "number",
             "format": "float"
@@ -1508,11 +1494,11 @@
             "type": "integer",
             "format": "int32"
           },
-          "createdAt": {
+          "createdDate": {
             "type": "string",
             "format": "date-time"
           },
-          "modifiedAt": {
+          "lastModifiedDate": {
             "type": "string",
             "format": "date-time"
           },
@@ -1520,7 +1506,7 @@
             "type": "integer",
             "format": "int32"
           },
-          "modifiedBy": {
+          "lastModifiedBy": {
             "type": "integer",
             "format": "int32"
           },
@@ -1610,11 +1596,11 @@
             "type": "integer",
             "format": "int32"
           },
-          "createdAt": {
+          "createdDate": {
             "type": "string",
             "format": "date-time"
           },
-          "modifiedAt": {
+          "lastModifiedDate": {
             "type": "string",
             "format": "date-time"
           },
@@ -1622,7 +1608,7 @@
             "type": "integer",
             "format": "int32"
           },
-          "modifiedBy": {
+          "lastModifiedBy": {
             "type": "integer",
             "format": "int32"
           },
@@ -1884,13 +1870,13 @@
           "username": {
             "type": "string"
           },
+          "accountNonLocked": {
+            "type": "boolean"
+          },
           "credentialsNonExpired": {
             "type": "boolean"
           },
           "accountNonExpired": {
-            "type": "boolean"
-          },
-          "accountNonLocked": {
             "type": "boolean"
           }
         }
